examples/pos/issue971_2.effekt
def hnd{ body: => Unit }: Unit = {
  def resum{ bod: {=> Unit} => Unit }: Unit = {
    bod{body}  
  }
  resum { {b} => b() }
  resum { {b} => () }
}
def main() = {
  hnd{
    ()
  }
}